src/app/globals.css
:root {

    --header-height: 4rem;
    --aside-width: 10rem;

    /* === MAIN COLOR === */
    --first-color: hsla(11, 100%, 63%, 1);
    --second-color: hsla(222, 55%, 25%, 1);
    --first-color-lighter: hsl(11, 100%, 60%);
    --second-color-lighter: hsl(222, 40%, 30%);
    /* === END OF MAIN COLOR === */

    /* === UTILS COLOR === */
    --primary-color: hsla(234, 86%, 65%, 1);
    --danger-color: hsla(340, 80%, 57%, 1);
    --success-color: hsla(160, 70%, 47%, 1);
    --warning-color: hsla(36, 80%, 57%, 1);
    --crimson-color: crimson;
    --primary-sec-color: hsla(234, 86%, 60%, 1);
    --danger-sec-color: hsla(340, 80%, 47%, 1);
    --success-sec-color: hsla(160, 70%, 44%, 1);
    --warning-sec-color: hsla(36, 80%, 47%, 1);
    --crimson-sec-color: crimson;
    --whatsapp-color: #25D366;
    --infoDark-color: #7d8da1;
    --infoLight-color: #dce1eb;
    --body-color: #f6f6f9;
    --body2-color: #ffffff;
    --white-color: #fff;
    --alwaysWhite-color: #ffffff;
    --dark-color: #363949;
    --darkVariant-color: #677483;
    --light-color: rgba(132, 139, 200, 0.2);
    --lighter-color: rgba(132, 139, 200, 0.1);
    --scroll-bar-color: hsl(222, 12%, 90%);
    --scroll-thumb-color: hsl(222, 12%, 80%);
    --scroll-thumbHover-color: hsla(222, 40%, 30%, .75);
    --skeleton-base: hsl(11, 8%, 92%);
    --skeleton-base2: hsl(11, 8%, 82%);
    --skeleton-highlight: hsl(11, 8%, 99%);
    --logo-first-color: #FF6341;
    --logo-second-color: #1d3263;
    --logo-second-color-lighter: hsla(222, 35%, 30%, .95);

    /* === END OF UTILS COLOR === */

    /* === INNER === */
    --inner-color-bg1: #F8FAFC;
    /* === END OF INNER === */

    /* === BOX === */
    --box-color-bg1: #FFFFFF;
    --box-color-bg2: var(--inner-color-bg1);
    --box-color-success: hsl(160, 100%, 95%);
    --box-color-warning: hsl(36, 100%, 95%);
    --box-color-danger: hsl(340, 100%, 95%);
    --box-color-crimson: hsl(0, 100%, 95%);
    /* === END OF BOX === */

    /* === BORDER-RADIUS === */
    --card-border-radius: 2rem;
    --border-radius-1: 0.4rem;
    --border-radius-2: 0.8rem;
    --border-radius-3: 1.2rem;
    /* === END OF BORDER-RADIUS === */

    /* === PADDING === */
    --card-padding: 1.8rem;
    --padding-1: 1.2rem;
    /*  === END OF PADDING === */

    /* === MARGIN === */
    --m-0-25: .25rem;
    --m-0-5: .5rem;
    --m-0-75: .75rem;
    --m-1: 1rem;
    --m-1-25: 1.25rem;
    --m-1-5: 1.5rem;
    --m-2: 2rem;
    --m-2-5: 2.5rem;
    --m-3: 3rem;
    /*  === END OF MARGIN === */

    /* === FONT-SIZE === */
    --big-font-size: 2.5rem;
    --h1-font-size: 1.725rem;
    --h2-font-size: 1.5rem;
    --h3-font-size: 1.25rem;
    --normal-font-size: 1.075rem;
    --small-font-size: .850rem;
    --smaller-font-size: .800rem;
    /*  === END OF FONT-SIZE === */

    /* === FONT-WEIGHT === */
    --font-extra-light: 200;
    --font-light: 300;
    --font-regular: 400;
    --font-medium: 500;
    --font-semi-bold: 600;
    --font-bold: 700;
    --font-extra-bold: 800;
    /*  === END OF FONT-WEIGHT === */

    /* === Z-INDEX === */
    --z-default: 1;
    --z-tooltip: 10;
    --z-fixed: 100;
    --z-modal: 1000;
    /*  === END OF Z-INDEX === */

    /* === BOX-SHADOW === */
    --box-shadow: 0 1rem 1.5rem var(--light-color);
    --box-shadow2: 0 0 .2rem .1rem rgba(0, 0, 0, .2);
    /* === END OF BOX-SHADOW === */

    /* === TRANSITION === */
    --transition-default: .3s;
    /* === END OF TRANSITION === */

    /* === USERS '/users' === */
    --users-big-circle: linear-gradient(-45deg, hsl(222, 40%, 30%), hsl(222, 40%, 30%));
    --users-box-shadow: 0 0 .5rem var(--logo-second-color);
    --users-box-shadow-lighter: 0 0 .5rem rgba(29, 50, 99, .5);
    --users-btn-alt: var(--second-color-lighter);
    --users-btn-hov: var(--second-color);
    --users-btn-sec: hsl(222, 100%, 95%);
    --users-btn-sec-hov: hsl(222, 100%, 95%);
    --users-loader-prim: #edeffd;
    --users-loader-sec: #1d3263;
    --accordion-bg-color: hsl(222, 42%, 95%);
    --accordion-bg2-color: hsl(222, 42%, 85%);
    --accordion-highlight-color: hsl(222, 40%, 30%);
    /* === END OF USERS '/users' === */
}

.dark-theme {
    /* === MAIN COLOR === */
    --first-color-lighter: hsl(11, 100%, 65%);
    --second-color-lighter: hsl(222, 30%, 35%);
    /* === END OF MAIN COLOR === */

    /* === UTILS COLOR === */
    --primary-color: hsla(234, 76%, 69%, 1);
    --danger-color: hsla(340, 100%, 68%, 1);
    --success-color: hsla(160, 86%, 60%, 1);
    --warning-color: hsla(36, 100%, 67%, 1);
    --crimson-color: crimson;
    --primary-sec-color: hsla(234, 76%, 64%, 1);
    --danger-sec-color: hsla(340, 100%, 63%, 1);
    --success-sec-color: hsla(160, 86%, 50%, 1);
    --warning-sec-color: hsla(36, 100%, 62%, 1);
    --crimson-sec-color: crimson;
    --body-color: #181a1e;
    --body2-color: #181a1e;
    --white-color: #202528;
    --dark-color: #edeffd;
    --darkVariant-color: #a3bdcc;
    --light-color: rgba(0, 0, 0, 0.4);
    --lighter-color: rgba(0, 0, 0, 0.2);
    --scroll-bar-color: #677483;
    --scroll-thumb-color: rgba(0, 0, 0, 0.5);
    --scroll-thumbHover-color: hsla(11, 75%, 35%, .5);
    --skeleton-base: rgba(132, 139, 200, 0.1);
    --skeleton-base2: rgba(132, 139, 200, 0.2);
    --skeleton-highlight: #677483;
    --logo-first-color: #f6f6f9;
    --logo-second-color: #FF6341;
    --logo-second-color-lighter: hsla(11, 100%, 62.5%, .95);
    --inner-custom: #18181B;
    /* === END OF UTILS COLOR === */

    /* === INNER === */
    --inner-color-bg1: #18181B;
    /* === END OF INNER === */

    /* === BOX === */
    --box-color-bg1: #3F3F46;
    --box-color-bg2: #3F3F46;
    --box-color-success: hsl(160, 25%, 21%);
    --box-color-warning: hsl(36, 25%, 21%);
    --box-color-danger: hsl(340, 25%, 21%);
    --box-color-crimson: hsl(0, 25%, 21%);
    /* === END OF BOX === */

    /* === BOX-SHADOW === */
    --box-shadow: 0 1rem 1.5rem var(--light-color);
    --box-shadow2: none;
    /* === END OF BOX-SHADOW === */
    
    /* === USERS '/users' === */
    --users-big-circle: linear-gradient(-45deg, #FF6341, #FF6341);
    --users-box-shadow: 0 0 .5rem var(--logo-second-color);
    --users-box-shadow-lighter: 0 0 .5rem rgba(255, 99, 65, .75);
    --users-btn-alt: var(--first-color-lighter);
    --users-btn-hov: var(--first-color);
    --users-btn-sec: hsl(11, 25%, 21%);
    --users-btn-sec-hov: hsl(11, 25%, 21%);
    --users-loader-prim: #FF6341;
    --users-loader-sec: #1d3263;
    --accordion-bg-color: hsl(200, 6%, 32%);
    --accordion-bg2-color: hsl(200, 6%, 47%);
    --accordion-highlight-color: hsl(11, 100%, 65%);
    /* === END OF USERS '/users' === */

}

* {
    margin: 0;
    padding: 0;
    outline: 0;
    border: 0;
    appearance: none;
    text-decoration: none;
    box-sizing: border-box;
    -webkit-tap-highlight-color: transparent;
}

html {
    font-size: 14px;
}

body {
    width: 100vw;
    height: 100vh;
    font-size: .8rem;
    background: var(--body-color);
    color: var(--dark-color);
    user-select: none;
    overflow-x: hidden;
}

body.disable_scroll {
    overflow: hidden;
}

body,
input,
select,
button {
    font-family: var(--poppins-font);
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
    -webkit-text-fill-color: var(--dark-color) !important;
    -webkit-background-clip: text !important;
    background-clip: text !important;
}

input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type="number"] {
    -moz-appearance: textField;
}

a {
    color: var(--dark-color);
}

p {
    color: var(--darkVariant-color);
}

b {
    color: var(--dark-color);
}

img {
    width: 100%;
    height: auto;
}

h1,
h2,
h3,
h4,
h5 {
    font-weight: 700;
}

h1 {
    font-size: 1.8rem;
}

h2 {
    font-size: 1.4rem;
}

h3 {
    font-size: 0.87rem;
}

h4 {
    font-size: 0.8rem;
}

h5 {
    font-size: 0.77rem;
}

small {
    font-size: 0.75rem;
}

::-webkit-scrollbar {
    width: .60rem;
    background-color: var(--scroll-bar-color);
    border-radius: .5rem;
}

::-webkit-scrollbar-thumb {
    background-color: var(--scroll-thumb-color);
    border-radius: .5rem;
}

::-webkit-scrollbar-thumb:hover {
    background-color: var(--scroll-thumbHover-color);
    ;
    border-radius: .5rem;
}

main.dashboard {
    width: 100%;
    height: 100%;
    margin: 0;
}

@media screen and (min-width: 768px) {
    :root {
        --header-height: 4.5rem;
    }

    main.dashboard {
        width: 96%;
        margin: 0 auto;
    }
}

@media screen and (min-width: 1280px) {
    main.dashboard {
        width: 98%;
    }

    aside.dashboard {
        position: relative;
    }
}

/* @media screen and (min-width: 1920px) {
    :root {
        --big-font-size: 3rem;
        --h1-font-size: 2rem;
        --h2-font-size: 1.75rem;
        --h3-font-size: 1.5rem;
        --normal-font-size: 1.225rem;
        --small-font-size: 1.075rem;
        --smaller-font-size: .975rem;
    }
} */

